--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
   <title>Animals Around the World</title>
   <link href="index.css" type="text/css" rel="stylesheet">
+  
+  
 </head>
 <body>
+	<link rel="icon" href="/favicon.ico" type="image/x-icon">
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
   <h1>The Brown Bear</h1>
   <h2><a href="https://en.wikipedia.org">Home</a> <a href="https://en.wikipedia.org/wiki/Brown_bear">LearnMore</a> <a href="Google.com">AboutUs</a></h2>
   <!-- A section that describes the brown bear -->
