--- a/index.html
+++ b/index.html
@@ -1,35 +1,44 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Animals Around the World</title>
-  <link href="index.css" type="text/css" rel="stylesheet">
-  
-  
-</head>
-<body>
-	<link rel="icon" href="/favicon.ico" type="image/x-icon">
-	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-  <h1>The Brown Bear</h1>
-  <h2><a href="https://en.wikipedia.org">Home</a> <a href="https://en.wikipedia.org/wiki/Brown_bear">LearnMore</a> <a href="Google.com">AboutUs</a></h2>
-  <!-- A section that describes the brown bear -->
-  <p>The brown bear (Ursus arctos) is native to parts of northern Eurasia and North America. Its conservation status is currently "Least Concern." There are many subspecies within the brown bear species, including the Atlas bear and the Himalayan brown bear. </p>
- 
-  <div>
-  <p>Here are some bear species:</p>
-  <ul>
-    <li>Arctos</li>
-    <li>Collarus</li>
-    <li>Horribilis</li>
-    <li>Nelsoni (extinct)</li>
-  </ul>
-  <p>The following countries have the largest populations of brown bears:</p>
-  <ol>
-    <li>Russia</li>
-    <li>United States</li>
-    <li>Canada</li>
-  </ol>
-  <br>
-    <img src="https://s3.amazonaws.com/codecademy-content/courses/web-101/web101-image_brownbear.jpg" />
-  </div>
-</body> 
-</html>
+	<head>
+		<title>Felipe Cueto</title>
+		<!--<link href="index.css" type="text/css" rel="stylesheet">-->
+		<link href="indexCss.css" type="text/css" rel="stylesheet">
+			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+			</head>
+			<body>
+				<h1>Felipe Cueto</h1>
+				<h2>
+					<a href="https://www.linkedin.com/in/felipe-cueto-8bb30197/">LinkedIn</a>
+					<br>
+						<a href="https://twitter.com/felipecuetor">Twitter</a>
+						<br>
+							<a href="https://goo.gl/photos/SU4FXyA4NYK8xpNt5">FotosCiudadPerdida</a>
+						</h2>
+						<div>
+							<h3>Perfil Profesional</h3>
+							<p>Estudiante Bilingue de &uacute;ltimo semestre de Ingenier&iacute;a de Sistemas en la Universidad de los Andes. 
+				Estudiando doble programa con Ingenier&iacute;a Electr&oocute;nica. Interesado en el desarrollo de software, la 
+				inteligencia artificial, el desarrollo en dispositivos m&oacute;viles. Conocimientos en lenguajes de programaci&oacute;n, 
+				an&aacute;lisis de sistemas, estructuras de datos, diseño de soluciones de tecnolog&iacute;as de informaci&oacute;n, y bases de datos. 
+				Con estudios acad&eacute;micos para el desarrollo interdisciplinario de software.
+
+								<h3>Formaci&oacute;n Acad&eacute;mica</h3>
+								<p>
+									<ul>
+										<li>Bachiller Acad&eacute;mico Colegio Campoalegre Sopo, 2013 <a href="http://campoalegre.edu.co/">Campoalegre</a>
+										</li>
+										<li>Estudiante de ingenier&iacute;a de sistemas Universidad de los Andes S&eacute;ptimo Semestre Bogot&aacute;, 2017 <a href="http://uniandes.edu.co/">Uniandes</a>
+										</li>
+										<li>Estudiante de ingenier&iacute;a electr&oacute;nica Universidad de los Andes Tercer Semestre Bogot&aacute;, 2017 <a href="http://uniandes.edu.co/">Uniandes</a>
+										</li>
+									</ul>
+								</p>
+								<h3>Trabajos y logros acad&eacute;micos</h3>
+								<p>Parte del equipo ganador del concurso de ExpoAndes el segundo semestre del 2013, trabajando en una aplicaci&oacute;n Android de reconocimiento de comandos de voz. Parte del equipo Qwerty en el evento Innovandes el segundo semestre del 2016, trabajando en un programa de reconocimiento y an&aacute;lisis de gram&aacute;ticas.</p>
+								<h3>Habilidades</h3>
+								<p>Ingles Avanzado. (Aun por presentar el Toefl) Mucha experiencia con el lenguaje de programaci&oacute;n Java. Experiencia con Html, Css, Javascript, SQL, Cisco IOS. Poca experiencia con C, C++, y Assembly. Conocimientos en desarrollo de bases de datos, modelado y an&aacute;lisis de arquitecturas de negocios desde una perspectiva de sistemas, y desarrollo de software multitareas. Poco conocimiento en desarrollo de soluciones de seguridad.</p>
+
+							</div>
+						</body>
+					</html>
