--- a/index.html
+++ b/index.html
@@ -1,44 +1,110 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 	<head>
-		<title>Felipe Cueto</title>
-		<!--<link href="index.css" type="text/css" rel="stylesheet">-->
-		<link href="indexCss.css" type="text/css" rel="stylesheet">
-			<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-			</head>
-			<body>
-				<h1>Felipe Cueto</h1>
-				<h2>
-					<a href="https://www.linkedin.com/in/felipe-cueto-8bb30197/">LinkedIn</a>
-					<br>
-						<a href="https://twitter.com/felipecuetor">Twitter</a>
-						<br>
-							<a href="https://goo.gl/photos/SU4FXyA4NYK8xpNt5">FotosCiudadPerdida</a>
-						</h2>
-						<div>
-							<h3>Perfil Profesional</h3>
-							<p>Estudiante Bilingue de &uacute;ltimo semestre de Ingenier&iacute;a de Sistemas en la Universidad de los Andes. 
+		<link rel="icon" href="/favicon.ico" type="image/x-icon">
+			<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+
+				<meta charset="utf-8">
+					<meta http-equiv="X-UA-Compatible" content="IE=edge">
+						<meta name="viewport" content="width=device-width, shrink-to-fit=no, initial-scale=1">
+							<meta name="description" content="">
+								<meta name="author" content="">
+
+									<title>Simple Sidebar - Start Bootstrap Template</title>
+
+									<!-- Bootstrap Core CSS -->
+									<link href="css/bootstrap.min.css" rel="stylesheet">
+
+										<!-- Custom CSS -->
+										<link href="css/simple-sidebar.css" rel="stylesheet">
+
+											<!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+											<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+											<!--[if lt IE 9]>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+
+										</head>
+
+										<body>
+
+											<div id="wrapper">
+
+												<!-- Sidebar -->
+												<div id="sidebar-wrapper">
+													<ul class="sidebar-nav">
+														<ul class="sidebar-nav">
+															<li class="sidebar-brand">
+																<a href="https://www.linkedin.com/in/felipe-cueto-8bb30197/">Felipe Cueto</a>
+															</li>
+															<li>
+																<a href="https://www.linkedin.com/in/felipe-cueto-8bb30197/">LinkedIn</a>
+															</li>
+															<li>
+																<a href="https://twitter.com/felipecuetor">Twitter</a>
+															</li>
+															<li>
+																<a href="https://goo.gl/photos/SU4FXyA4NYK8xpNt5">FotosCiudadPerdida</a>
+															</li>
+														</ul>
+													</ul>
+												</div>
+												<!-- /#sidebar-wrapper -->
+
+												<!-- Page Content -->
+												<div id="page-content-wrapper">
+													<div class="container-fluid">
+														<div class="row">
+															<div class="col-lg-12">
+																<h3>Perfil Profesional</h3>
+																<p>Estudiante Bilingue de &uacute;ltimo semestre de Ingenier&iacute;a de Sistemas en la Universidad de los Andes. 
 				Estudiando doble programa con Ingenier&iacute;a Electr&oocute;nica. Interesado en el desarrollo de software, la 
 				inteligencia artificial, el desarrollo en dispositivos m&oacute;viles. Conocimientos en lenguajes de programaci&oacute;n, 
 				an&aacute;lisis de sistemas, estructuras de datos, diseño de soluciones de tecnolog&iacute;as de informaci&oacute;n, y bases de datos. 
 				Con estudios acad&eacute;micos para el desarrollo interdisciplinario de software.
 
-								<h3>Formaci&oacute;n Acad&eacute;mica</h3>
-								<p>
-									<ul>
-										<li>Bachiller Acad&eacute;mico Colegio Campoalegre Sopo, 2013 <a href="http://campoalegre.edu.co/">Campoalegre</a>
-										</li>
-										<li>Estudiante de ingenier&iacute;a de sistemas Universidad de los Andes S&eacute;ptimo Semestre Bogot&aacute;, 2017 <a href="http://uniandes.edu.co/">Uniandes</a>
-										</li>
-										<li>Estudiante de ingenier&iacute;a electr&oacute;nica Universidad de los Andes Tercer Semestre Bogot&aacute;, 2017 <a href="http://uniandes.edu.co/">Uniandes</a>
-										</li>
-									</ul>
-								</p>
-								<h3>Trabajos y logros acad&eacute;micos</h3>
-								<p>Parte del equipo ganador del concurso de ExpoAndes el segundo semestre del 2013, trabajando en una aplicaci&oacute;n Android de reconocimiento de comandos de voz. Parte del equipo Qwerty en el evento Innovandes el segundo semestre del 2016, trabajando en un programa de reconocimiento y an&aacute;lisis de gram&aacute;ticas.</p>
-								<h3>Habilidades</h3>
-								<p>Ingles Avanzado. (Aun por presentar el Toefl) Mucha experiencia con el lenguaje de programaci&oacute;n Java. Experiencia con Html, Css, Javascript, SQL, Cisco IOS. Poca experiencia con C, C++, y Assembly. Conocimientos en desarrollo de bases de datos, modelado y an&aacute;lisis de arquitecturas de negocios desde una perspectiva de sistemas, y desarrollo de software multitareas. Poco conocimiento en desarrollo de soluciones de seguridad.</p>
+																	<h3>Formaci&oacute;n Acad&eacute;mica</h3>
+																	<p>
+																		<ul>
+																			<li>Bachiller Acad&eacute;mico Colegio Campoalegre Sopo, 2013 <a href="http://campoalegre.edu.co/">Campoalegre</a>
+																			</li>
+																			<li>Estudiante de ingenier&iacute;a de sistemas Universidad de los Andes S&eacute;ptimo Semestre Bogot&aacute;, 2017 <a href="http://uniandes.edu.co/">Uniandes</a>
+																			</li>
+																			<li>Estudiante de ingenier&iacute;a electr&oacute;nica Universidad de los Andes Tercer Semestre Bogot&aacute;, 2017 <a href="http://uniandes.edu.co/">Uniandes</a>
+																			</li>
+																		</ul>
+																	</p>
+																	<h3>Trabajos y logros acad&eacute;micos</h3>
+																	<p>Parte del equipo ganador del concurso de ExpoAndes el segundo semestre del 2013, trabajando en una aplicaci&oacute;n Android de reconocimiento de comandos de voz. Parte del equipo Qwerty en el evento Innovandes el segundo semestre del 2016, trabajando en un programa de reconocimiento y an&aacute;lisis de gram&aacute;ticas.</p>
+																	<h3>Habilidades</h3>
+																	<p>Ingles Avanzado. (Aun por presentar el Toefl) Mucha experiencia con el lenguaje de programaci&oacute;n Java. Experiencia con Html, Css, Javascript, SQL, Cisco IOS. Poca experiencia con C, C++, y Assembly. Conocimientos en desarrollo de bases de datos, modelado y an&aacute;lisis de arquitecturas de negocios desde una perspectiva de sistemas, y desarrollo de software multitareas. Poco conocimiento en desarrollo de soluciones de seguridad.</p>
 
-							</div>
-						</body>
-					</html>
+																</div>
+															</div>
+														</div>
+													</div>
+													<!-- /#page-content-wrapper -->
+
+												</div>
+												<!-- /#wrapper -->
+
+												<!-- jQuery -->
+												<script src="js/jquery.js"/>
+
+												<!-- Bootstrap Core JavaScript -->
+												<script src="js/bootstrap.min.js"/>
+
+												<!-- Menu Toggle Script -->
+												<script>
+    $("#menu-toggle").click(function(e) {
+        e.preventDefault();
+        $("#wrapper").toggleClass("toggled");
+    });
+												</script>
+
+											</body>
+
+										</html>
+										
