--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 																					<h1>Felipe Cueto</h1>
 																					<h3>Perfil Profesional</h3>
 																					<p>Estudiante Bilingue de &uacute;ltimo semestre de Ingenier&iacute;a de Sistemas en la Universidad de los Andes. 
-				Estudiando doble programa con Ingenier&iacute;a Electr&oocute;nica. Interesado en el desarrollo de software, la 
+				Estudiando doble programa con Ingenier&iacute;a Electr&oacute;nica. Interesado en el desarrollo de software, la 
 				inteligencia artificial, el desarrollo en dispositivos m&oacute;viles. Conocimientos en lenguajes de programaci&oacute;n, 
 				an&aacute;lisis de sistemas, estructuras de datos, diseño de soluciones de tecnolog&iacute;as de informaci&oacute;n, y bases de datos. 
 				Con estudios acad&eacute;micos para el desarrollo interdisciplinario de software.
