--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 																			<br>
 																				<br>
 																					<li class="sidebar-brand">
-																					Links
+																						<p>Felipe Cueto</p>
 																					</li>
 																					<li>
 																						<a target="_blank"href="https://www.linkedin.com/in/felipe-cueto-8bb30197/">LinkedIn</a>
@@ -80,7 +80,8 @@
 																		<div class="container-fluid">
 																			<div class="row">
 																				<div class="col-lg-12">
-																					<h1>Felipe Cueto</h1>
+																				
+																				<h4>Felipe Cueto</h4>
 																					<h3>Perfil Profesional</h3>
 																					<p>Estudiante Bilingue de &uacute;ltimo semestre de Ingenier&iacute;a de Sistemas en la Universidad de los Andes. 
 				Estudiando doble programa con Ingenier&iacute;a Electr&oacute;nica. Interesado en el desarrollo de software, la 
