--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 																						<button type="button" class="btn btn-default" onclick="cambioFoto(3)">3</button>
 																						<button type="button" class="btn btn-default" onclick="fotoMasUno()">></button>
 																						<br>
-																						<img src="1.jpg" id="galeria"/>
+																						<img src="1.JPG" id="galeria"/>
 
 																						<h3>Videos</h3>
 																						<p>
