--- a/componente/elMuro.html
+++ b/componente/elMuro.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <!-- Se puede agregar keywords que describan la el nucleo de la aplicación -->
+          <!-- Se puede agregar detalles sobre el browser que mejore su identidad de imagenes -->
     <title>Visor de imagenes proyecto 2</title>
 </head>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
@@ -11,6 +13,8 @@
 
 <body>
     <div id="main">
+ <!-- se debria tener en cuenta el numero de modulos necesarios, creo que faltan
+pero la estructura del poryecto no me permite visualizar bien el contenido de los modulos -->
         <div class="container">
 </body>
 <script src="https://code.jquery.com/jquery-3.1.1.min.js" integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8=" crossorigin="anonymous"></script>
